--- a/a/al/all/allaboutvision.com.html
+++ b/a/al/all/allaboutvision.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allaboutvision.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201024926id_/http%3A//www.allaboutvision.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allaboutvision.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604051451id_/http%3A//www.allaboutvision.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>AllAboutVision.com Privacy Policy</title>
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style_sheet.css" type="text/css">
 </head>
 
-<body bgcolor="#003399" topmargin="0" marginheight="0" marginwidth="0" leftmargin="0" link="#CC0000" vlink="#CC0000">
+<body bgcolor="#003399" topmargin="0" marginheight="0" marginwidth="0" leftmargin="0" link="#000066" vlink="#000066">
 
 <center><table border="0" cellpadding="0" cellspacing="0" width="740">
 <tbody><tr><td width="740" colspan="4"><img src="sp.gif" width="1" height="1" vspace="6"><a name="top"></a></td></tr>
@@ -23,52 +23,50 @@
 </tr></tbody></table></center>
 
 <!--webbot bot="Include" U-Include="include/main_tabs.htm" TAG="BODY" startspan -->
-<center><table border="0" cellpadding="0" cellspacing="0" width="740" bgcolor="#FFFFFF"><tbody><tr>
-<td width="1"><img src="sp.gif" alt="Everything in Sight: LASIK, eyeglasses, sunglasses, contact lenses, eye problems, eye diseases, and more." width="1" height="1"></td>
-<td width="738"><map name="FPMap1_I1">
-<area href="http://www.allaboutvision.com/premiums/index.htm" shape="rect" coords="213, 0, 296, 23">
-<area href="http://www.allaboutvision.com/news/index.htm" shape="rect" coords="305, 0, 405, 23">
-<area href="http://www.allaboutvision.com/products/index.htm" shape="rect" coords="413, 0, 500, 23">
-<area href="http://www.allaboutvision.com/finddoc/eye_doctor.htm" shape="rect" coords="508, 0, 611, 23">
-<area href="http://www.allaboutvision.com/askdoc/index.htm" shape="rect" coords="620, 0, 737, 23">
-<area href="http://www.allaboutvision.com" shape="rect" coords="6, 0, 203, 23"></map><img border="0" src="images/top_nav.gif" width="738" height="24" usemap="#FPMap1_I1"></td>
-<td width="1"><img src="sp.gif" width="1" height="1"></td>
+
+<center><table border="0" cellpadding="0" cellspacing="0" width="740"><tbody><tr>
+<td width="1" bgcolor="#ffffff"><img src="include/sp.gif" alt="Everything in Sight: LASIK, eyeglasses, sunglasses, contact lenses, eye problems, eye diseases, and more." width="1" height="1"></td>
+
+<td valign="top"><a href="http://www.allaboutvision.com/premiums/"><img border="0" src="include/tab_coupons.gif" width="45" height="16" vspace="1" hspace="17"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/news/"><img border="0" src="include/tab_whatsnew.gif" width="62" height="16" vspace="1" hspace="16"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/products/"><img border="0" src="include/tab_products.gif" width="46" height="16" vspace="1" hspace="16"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/finddoc/eye_doctor.htm"><img border="0" src="include/tab_finddoc.gif" width="71" height="16" vspace="1" hspace="16"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20"></td>
+<td width="1"><img src="include/sp.gif" width="1" height="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/askdoc/"><img border="0" src="include/tab_askdoc.gif" width="84" height="16" vspace="1" hspace="16"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/asp/sitesearch.asp"><img border="0" src="include/tab_search.gif" width="58" height="16" vspace="1" hspace="16"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="http://www.allaboutvision.com/faq/"><img border="0" src="include/tab_faqs.gif" width="26" height="16" vspace="1" hspace="17"></a></td><td width="1"><img src="include/tab_rule.gif" width="1" height="20" hspace="1"></td>
+<td valign="top"><a href="/asp/bannerredirect.asp?banner=440" target="_blank"><img border="0" src="include/tab_eyetest.gif" width="44" height="16" vspace="1" hspace="17"></a></td>
+
+<td width="1" bgcolor="#ffffff"><img src="include/sp.gif" width="1" height="1"></td>
+</tr>
+<tr>
+<td width="1" bgcolor="#ffffff"><img src="include/sp.gif" width="1" height="1"></td>
+<td width="738" colspan="16"><img src="include/sp.gif" width="2" height="1" hspace="368"></td>
+<td width="1" bgcolor="#ffffff"><img src="include/sp.gif" width="1" height="1"></td>
 </tr></tbody></table></center>
 
-<!--webbot bot="Include" endspan i-checksum="17473" -->
+<!--webbot bot="Include" endspan i-checksum="36794" -->
 
 <!--webbot bot="Include" U-Include="include/main_nav_no_menu.htm" TAG="BODY" startspan -->
 
-<center><table border="0" cellpadding="0" cellspacing="0" width="740" bgcolor="#CCCCCC"><tbody><tr>
+<center><table border="0" cellpadding="0" cellspacing="0" width="740"><tbody><tr>
 <td width="1" bgcolor="#FFFFFF"><img src="sp.gif" width="1" height="1"></td>
-<td width="13"><img src="sp.gif" width="1" height="1" hspace="6"></td>
-<td width="440" class="drop">
-<table border="0" cellpadding="0" cellspacing="0">
-<form method="post" action="http://www.allaboutvision.com/asp/sitesearch.asp"></form>
-<tbody><tr>
-<td align="left" valign="middle" class="drop"><input type="text" name="searchstring" size="20" class="drop" value=""></td>
-<td align="left" valign="middle" class="drop"><img src="sp.gif" width="1" height="1" vspace="1"><br><input type="image" name="Action" src="images/go_search.gif" alt="Go" width="22" height="22" border="0" hspace="3"></td>
-</tr></tbody></table></td>
-<td width="270" valign="middle" align="right"><a class="graybar" href="http://www.allaboutvision.com/sitemap.htm">Site Map</a> &nbsp;  &nbsp; 
-<a class="graybar" href="http://www.allaboutvision.com/asp/login.asp">Change Your Profile</a> &nbsp;  &nbsp; 
-<a class="graybar" href="http://www.allaboutvision.com/faq/">FAQs</a></td>
-<td width="15"><img src="sp.gif" width="1" height="1" hspace="7"></td>
+<td width="738" bgcolor="#CCCCCC"><img src="sp.gif" width="1" height="1" vspace="1"></td>
 <td width="1" bgcolor="#FFFFFF"><img src="sp.gif" width="1" height="1"></td>
 </tr></tbody></table></center>
 
-<!--webbot bot="Include" endspan i-checksum="49717" -->
+<!--webbot bot="Include" endspan i-checksum="23797" -->
 
 <!--webbot bot="Include" U-Include="include/main_shadow_gray.htm" TAG="BODY" startspan -->
 
 <center><table border="0" cellpadding="0" cellspacing="0" width="740" bgcolor="#FFFFFF"><tbody><tr>
 <td width="1"><img src="sp.gif" width="1" height="1"></td>
-<td width="13" bgcolor="#CCCCCC"><img src="sp.gif" width="1" height="1" hspace="6"></td>
-<td width="106" bgcolor="#CCCCCC"><a href="http://www.allaboutvision.com/asp/sitesearch.asp"><img border="0" src="images/site_search.gif" width="58" height="7"></a></td>
+<td width="119" bgcolor="#CCCCCC"><img src="sp.gif" width="1" height="1" hspace="59"></td>
 <td width="619" background="images/nav_tile_horizontal.gif"><img src="images/nav_corner_top.gif" width="23" height="9"></td>
 <td width="1"><img src="sp.gif" width="1" height="1"></td>
 </tr></tbody></table></center>
 
-<!--webbot bot="Include" endspan i-checksum="12336" -->
+<!--webbot bot="Include" endspan i-checksum="41774" -->
 
 <!-- location -->
 <center><table border="0" cellpadding="0" cellspacing="0" width="740" bgcolor="#FFFFFF"><tbody><tr>
@@ -79,8 +77,7 @@
 
 <td width="449" valign="top">
 <table border="0" cellpadding="0" cellspacing="0" width="449"><tbody><tr>
-<td><p class="loc"><img src="sp.gif" width="1" height="1" vspace="3"><br>
-<span class="locb">Location:</span> <a href="http://www.allaboutvision.com">Home</a> &gt; Privacy Statement</p></td>
+<td><img src="sp.gif" width="1" height="1" vspace="3"></td>
 </tr></tbody></table></td>
 
 <td width="18"><img src="sp.gif" width="2" height="1" hspace="8"></td>
@@ -134,7 +131,6 @@ var section=new doArray( '',
  'http://www.allaboutvision.com/contacts/colors.htm',
  'http://www.allaboutvision.com/cvs/index.htm',
  'http://www.allaboutvision.com/contacts/index.htm',
- 'http://www.allaboutvision.com/trivia.htm',
  'http://www.allaboutvision.com/visionsurgery/inserts.htm',
  'http://www.allaboutvision.com/conditions/index.htm',
  'http://www.allaboutvision.com/conditions/dryeye.htm',
@@ -173,7 +169,6 @@ location=section[document.dropdown.site.selectedIndex];
 <option>color contacts </option>
 <option>computer vision syndrome </option>
 <option>contact lenses </option>
-<option>contest </option>
 <option>corneal inserts </option>
 <option>diseases </option>
 <option>dry eyes </option>
@@ -197,7 +192,7 @@ location=section[document.dropdown.site.selectedIndex];
 <option>sunglasses for kids </option>
 <option>teens </option></select></td></tr></tbody></table>
 
-<!--webbot bot="Include" endspan i-checksum="17629" -->
+<!--webbot bot="Include" endspan i-checksum="15295" -->
 
 </td>
 <td width="2%" bgcolor="#6699FF" height="22"><img src="sp.gif" width="1" height="1" hspace="1"></td>
@@ -211,7 +206,7 @@ location=section[document.dropdown.site.selectedIndex];
 <p>All About Vision’s policy is to respect the privacy of visitors to our website. This policy describes 
 how we gather information from our site’s visitors and what we do with it.</p>
 
-<p class="subhed">How We Collect Information</p>
+<h3 class="subhed">How We Collect Information</h3>
  
 <p>Our web server automatically recognizes each visitor’s domain name and we collect the domain name 
 of visitors to our website for the purposes of system administration. A domain name does not provide us 
@@ -226,7 +221,7 @@ voluntarily input this information. Any information you input will be used by us
 website. These statistics contain no personal information. <b>By voluntarily providing us with information 
 about yourself, you are consenting to our use of it in accordance with this policy.</b></p>
 
-<p class="subhed">How We Use Information</p>
+<h3 class="subhed">How We Use Information</h3>
 
 <p>We use the personally identifiable information we collect for internal purposes such as improving 
 our products and services, sending you e-mail (at your request only) about topics you have specified, 
@@ -259,7 +254,7 @@ children under 13 to participate. In cases where we would normally post a person
 site (such as a contest winner), we will choose a false name for any child under 18, if a 
 parent asks us to do so.</p>
 
-<p class="subhed">Other Sites</p>
+<h3 class="subhed">Other Sites</h3>
 
 <p>You have the opportunity to access other sites from AllAboutVision.com, by either clicking on a 
 site's link or on an advertisement. Please be aware these sites are outside the control of 
@@ -277,32 +272,19 @@ use the pull-down menu at the <a href="#top">top of this page</a>.<br>&nbsp; </p
 <td width="18" rowspan="2"><img src="sp.gif" width="2" height="1" hspace="8"></td>
 <td width="1" bgcolor="#CCCCCC" rowspan="2"><img src="sp.gif" width="1" height="1"></td>
 <td width="10" rowspan="2"><img src="sp.gif" width="2" height="1" hspace="4"></td>
-<td width="110" valign="top" align="center" rowspan="2">
-
-<!-- promo gifs -->
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-
-<tbody><tr><td align="center">&nbsp;</td></tr>
-
-</tbody></table>
-
-</td>
+<td width="110" valign="top" align="center" rowspan="2"><!-- promo gifs -->&nbsp; </td>
 <td width="8" rowspan="2"><img src="sp.gif" width="2" height="1" hspace="3"></td>
 <td width="1" rowspan="2"><img src="sp.gif" width="1" height="1"></td>
 </tr><tr>
 <td width="1"><img src="sp.gif" width="1" height="1"></td>
 
 <!-- end location -->
-
-<td width="119" bgcolor="#CCCCCC" valign="top"><div align="center">
-<table border="0" cellpadding="0" cellspacing="0" width="92">
-<tbody><tr><td bgcolor="#FFFFFF"><img src="sp.gif" width="1" height="1"></td></tr>
-<tr><td><img src="sp.gif" width="1" height="1" vspace="6"></td></tr>
-</tbody></table></div><!--webbot bot="Include" U-Include="include/main_site_nav.htm" TAG="BODY" startspan -->
+<td width="119" bgcolor="#CCCCCC" valign="top"><!--webbot bot="Include" U-Include="include/main_site_nav.htm" TAG="BODY" startspan -->
+<div align="center"><table border="0" cellpadding="0" cellspacing="0" width="92"><tbody><tr><td><p class="blurbred">READ OUR<br>COMPLETE<br>GUIDES TO:<br> &nbsp; </p></td></tr></tbody></table></div>
 
 <div align="center">
 <table border="0" cellpadding="0" cellspacing="0" width="92">
-<tbody><tr><td><p><a class="sitenav" href="http://www.allaboutvision.com/contacts">Contact Lenses</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
+<tbody><tr><td><p><a class="sitenav" href="http://www.allaboutvision.com/contacts" title="Learn about colors, disposables, extended wear, 30-day contacts, toric contacts for astigmatism, bifocal contacts, and more">Contact Lenses</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
 <a class="sitenav" href="http://www.allaboutvision.com/visionsurgery">LASIK &amp; Vision Surgery</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
 <a class="sitenav" href="http://www.allaboutvision.com/eyeglasses">Eyeglasses</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
 <a class="sitenav" href="http://www.allaboutvision.com/sunglasses">Sunglasses</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
@@ -327,14 +309,14 @@ use the pull-down menu at the <a href="#top">top of this page</a>.<br>&nbsp; </p
 <tr>
 <td><p><img src="sp.gif" vspace="6" width="1" height="1"><br>
 <a class="sitenav" href="http://www.allaboutvision.com/resources">Resources</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
-<a class="sitenav" href="http://www.allaboutvision.com/masthead.htm">About Us</a></p></td></tr>
+<a class="sitenav" href="http://www.allaboutvision.com/about-us.htm">About Us</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
+<a class="sitenav" href="http://www.allaboutvision.com/sitemap.htm">Site Map</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
+<a class="sitenav" href="http://www.allaboutvision.com/asp/join.asp">Newsletter Sign-Up</a><br><img src="sp.gif" vspace="4" width="1" height="1"><br>
+<a class="sitenav" href="http://www.allaboutvision.com/">Home</a></p></td></tr>
 </tbody></table></div>
 
-<!--webbot bot="Include" endspan i-checksum="63840" -->
-
-<p>&nbsp;</p></td>
-
-</tr></tbody></table>
+<!--webbot bot="Include" endspan i-checksum="25449" -->
+<p>&nbsp;</p></td></tr></tbody></table>
 
 <center><table border="0" cellpadding="0" cellspacing="0" width="740" bgcolor="#FFFFFF"><tbody><tr>
 <td width="1"><img src="sp.gif" width="1" height="1"></td>
@@ -349,20 +331,17 @@ use the pull-down menu at the <a href="#top">top of this page</a>.<br>&nbsp; </p
 <tbody><tr><td bgcolor="#CCCCCC"><img src="sp.gif" width="1" height="1"></td></tr>
 <tr><td><!--webbot bot="Include" U-Include="include/main_copyright.htm" TAG="BODY" startspan -->
 
-<p class="copyrt" align="center"><b>Link Colors:</b> <font color="#008000"><u>Green</u></font> = glossary terms, 
-<font color="#cc0000"><u>Red</u></font> = other pages<br>All About Vision 
-and Virtually Everything in Sight are registered trademarks and/or service marks 
-of Access Media Group, LLC. Copyright 2000-2001 Access Media Group, LLC. Please read our 
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<tbody><tr><td width="100%" align="center"><p class="copyrt" align="center"><b>Link Colors:</b> <font color="#008000"><u>Green</u></font> = glossary terms, 
+<font color="#000066"><u>Blue</u></font> = other pages<br>All About Vision and Virtually Everything in Sight are registered service marks 
+of Access Media Group, LLC. Copyright 2000-2002 Access Media Group, LLC. Please read our 
 <a href="http://www.allaboutvision.com/terms.htm">Terms of Use</a> and 
-<a href="http://www.allaboutvision.com/privacy.htm">Privacy Policy</a>. Note: This website was designed for 
-<a class="copyrt" style="text-decoration: none" href="http://www.allaboutvision.com/info/contacts.htm">browsers</a> that are 
-<a class="copyrt" style="text-decoration: none" href="http://www.allaboutvision.com/info/contactlenses.htm">version</a> 4 or 
-<a class="copyrt" style="text-decoration: none" href="http://www.allaboutvision.com/info/lasik.htm">higher</a> and for 
-<a class="copyrt" style="text-decoration: none" href="http://www.allaboutvision.com/info/laser_eye_surgery.htm">computer</a> screens 
-with 800 x 600 or higher resolution. Instructions on <a href="http://www.allaboutvision.com/link_to_us.htm">how to link to our site</a>. 
-Visit our <a href="http://www.access-media.net/aavkit/" target="new">online media kit</a>.<br><img src="sp.gif" width="1" height="1" vspace="3"></p>
+<a href="http://www.allaboutvision.com/privacy.htm">Privacy Policy</a>.<br>
+</p><form method="post" action="http://www.allaboutvision.com/asp/sitesearch.asp">
+<span class="drop" align="center">Search this website: <input type="text" name="searchstring" size="20" class="drop" value=""></span></form></td></tr></tbody></table>
 
-<!--webbot bot="Include" endspan i-checksum="58838" -->
+
+<!--webbot bot="Include" endspan i-checksum="59519" -->
 
 </td></tr></tbody></table></td>
 <td width="10"><img src="sp.gif" width="2" height="1" vspace="4"></td>
