--- a/a/ae/aet/aetv.com.html
+++ b/a/ae/aet/aetv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aetv.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217192537id_/http%3A//aande.com/feedback/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aetv.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604064314id_/http%3A//www.aande.com/feedback/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><!--created by grind@interactive8.com--><!--coded by grind@interactive8.com--><head>
 
@@ -8,10 +8,22 @@
 <!--
 // timeline jump
 function timelinejump(decade) {            
+
+	//if (decade.text == "Shackleton") {
+	//	Popp(decade.value);
+	//	return;
+	//}
+
         if (decade != "") {                    
-                self.location=decade; 
+		self.location=decade.value; 
+		return true;
         }
  }
+
+function Popp(page) { 
+	OpenWin = this.open(page, "CtrlWindow", "width=620,height=340,toolbar=0,menubar=0,location=0,scrollbars=0,resizable=0"); 
+} 
+
 
 // -->
 
@@ -39,7 +51,7 @@ image6on.src = "/images/nav_sign_on.gif";
 image8on = new Image();
 image8on.src = "/images/nav_srch_on.gif";
 image20on = new Image();
-image20on.src = "/images/nav_book_on.gif";
+image20on.src = "/images/nav_travel_on.gif";
 image0off = new Image();
 image0off.src = "/images/nav_home.gif";
 image1off = new Image();
@@ -57,7 +69,7 @@ image6off.src = "/images/nav_sign.gif";
 image8off = new Image();
 image8off.src = "/images/nav_srch.gif";
 image20off = new Image();
-image20off.src = "/images/nav_book.gif";
+image20off.src = "/images/nav_travel.gif";
 }
 
 function turnOn(imageName) {
@@ -85,19 +97,37 @@ AandE.com Contact Us
 </head>
 <body bgcolor="#FFFFFF" text="#000000" background="/images/bkg.gif">
 <form action="http://www.aetv.com/perl/redirect_ban.pl" method="post">
-<table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="/"><img src="/images/ae_logo.gif" alt="A&amp;E." width="115" height="75" border="0"></a></td><td><img src="/images/spacer.gif" alt=" " width="10" height="10" border="0"></td><td><img src="/images/spacer.gif" alt=" " width="2" height="2" border="0"><a href="http://ad.doubleclick.net/jump/www.aande.com/other;ord=1019"><img src="http://ad.doubleclick.net/ad/www.aande.com/other;ord=1019"></a>
+<table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="/"><img src="/images/ae_logo.gif" alt="A&amp;E." width="115" height="75" border="0"></a></td><td><img src="/images/spacer.gif" alt=" " width="10" height="10" border="0"></td><td><img src="/images/spacer.gif" alt=" " width="2" height="2" border="0"><!--DoubleClick Top Ad BEGIN-->
+<script language="Javascript1.1" src="http://ad.doubleclick.net/adj/aande.com/miscellaneous;;dcopt=ist;abr=!webtv;sz=468x60;ord=803283690?">
+</script>
+<script>
+<!--
+if ((!document.images && navigator.userAgent.indexOf('Mozilla/2.') >= 0) || navigator.userAgent.indexOf("WebTV") >= 0) {
+document.write('<a href="http://ad.doubleclick.net/jump/aande.com/miscellaneous;;sz=468x60;ord=803283690?"');
+document.write('<img src="http://ad.doubleclick.net/ad/aande.com/miscellaneous;;sz=468x60;ord=803283690?"></a>');
+}
+//-->
+</script>
+<noscript>
+<!-- for non javascript browsers and Netscape 2.x -->
+<a href="http://ad.doubleclick.net/jump/aande.com/miscellaneous;;sz=468x60;ord=803283690?">
+<img src="http://ad.doubleclick.net/ad/aande.com/miscellaneous;;sz=468x60;ord=803283690?"></a>
+</noscript>
+<!--DoubleClick Top Ad END-->
 </td></tr></tbody></table>
-<table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="/images/hd_fav_left.gif" alt=" " width="67" height="22" border="0"><img src="/images/hd_fav_blink.gif" alt="Arrow." width="13" height="22" border="0"><img src="/images/hd_fav_right.gif" alt="Find your favorite." width="198" height="22" border="0"></td><td><img src="/images/spacer.gif" alt=" " width="6" height="6" border="0"></td><td><select name="year" size="1" onchange="timelinejump(this.options[this.selectedIndex].value)">
+<table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="/images/hd_fav_left.gif" alt=" " width="67" height="22" border="0"><img src="/images/hd_fav_blink.gif" alt="Arrow." width="13" height="22" border="0"><img src="/images/hd_fav_right.gif" alt="Find your favorite." width="198" height="22" border="0"></td><td><img src="/images/spacer.gif" alt=" " width="6" height="6" border="0"></td><td><select name="year" size="1" onchange="return timelinejump(this.options[this.selectedIndex])">
 <option value="/tv/">Choose one</option>
 <option value="/tv/shows/centrest/">100 Centre Street</option>
 <option value="/tv/shows/castles/">America's Castles</option>
 <option value="/tv/shows/amerjustice/">American Justice</option>
 <option value="/tv/shows/joanlunden/">Behind Closed Doors</option>
-<option value="/tv/shows/billyjoel/">Billy Joel</option>
 <option value="/tv/shows/biography.html">Biography</option>
+<option value="/tv/shows/boymeetsgirl/">Boy Meets Girl</option>
 <option value="/tv/shows/breakfast.html">Breakfast with the Arts</option>
 <option value="/tv/shows/competition/">The Competition</option>
 <option value="/tv/shows/cityconfidential.html">City Confidential</option>
+<option value="/tv/shows/coldcasefiles/">Cold Case Files</option>
+<option value="/tv/shows/columbo/">Columbo</option>
 <option value="/tv/shows/crimestory">Crime Story</option>
 <option value="/tv/shows/dalpasc.html">Dalziel &amp; Pascoe</option>
 <option value="/tv/shows/horatio">Horatio Hornblower</option>
@@ -109,16 +139,20 @@ AandE.com Contact Us
 <option value="/tv/shows/livebyrequest/">Live By Request</option>
 <option value="/tv/shows/battalion/">The Lost Battalion</option>
 <option value="/tv/shows/magnum_pi.html">Magnum P.I.</option>
+<option value="/tv/shows/married/">Married in America</option>
 <option value="/tv/shows/midsomer.html">Midsomer Murders</option>
+<option value="/tv/shows/minutebyminute/">Minute by Minute</option>
 <option value="/tv/shows/murdershewrote.html">Murder, She Wrote</option>
+<option value="/tv/shows/murderone/">Murder One</option>
 <option value="/tv/shows/nerowolfe/">Nero Wolfe</option>
+<option value="/tv/shows/nymovies/">New York at the Movies</option>
 <option value="/tv/shows/newsradio/newsradio.html">News Radio</option>
 <option value="/tv/shows/nightcourt.html">Night Court</option>
 <option value="/tv/shows/poirot/">Poirot</option>
+<option value="/tv/shows/shackleton/">Shackleton</option>
 <option value="/tv/shows/simonsimon.html">Simon &amp; Simon</option>
-<option value="/tv/shows/sting">Sting in Tuscany</option>
 <option value="/tv/shows/travelswithharry/">Travels With Harry</option>
-<option value="/tv/shows/victoria/">Victoria &amp; Albert</option>
+<option value="/tv/shows/view/">The View</option>
 <option value="/tv/">------------------------------------</option>
 <option value="/tv/">Search all A&amp;E programs</option>
 </select>
@@ -128,34 +162,9 @@ AandE.com Contact Us
 <table border="0">
 <tbody><tr>
 <td valign="TOP">
-<a href="/" onmouseover="turnOn('image0'); return true" onmouseout="turnOff('image0')"><img src="/images/nav_home.gif" alt="Home." width="122" height="24" border="0" name="image0"></a><br><a href="/tv/" onmouseover="turnOn('image1'); return true" onmouseout="turnOff('image1')"><img src="/images/nav_ontv.gif" alt="On TV." width="122" height="21" border="0" name="image1"></a><br><a href="/perl/wwwthreads/wwwthreads_main.pl" onmouseover="turnOn('image2'); return true" onmouseout="turnOff('image2')"><img src="/images/nav_disc.gif" alt="Discussions." width="122" height="21" border="0" name="image2"></a><br><a href="http://store.aetv.com/cgi-bin/ae.storefront/" onmouseover="turnOn('image3'); return true" onmouseout="turnOff('image3')"><img src="/images/nav_store.gif" alt="ShopA&amp;E." width="122" height="21" border="0" name="image3"></a><br><a href="/bookclub/" onmouseover="turnOn('image20'); return true" onmouseout="turnOff('image20')"><img src="/images/nav_book.gif" alt="A&amp;E Book Club." width="122" height="21" border="0" name="image20"></a><br><a href="/class/" onmouseover="turnOn('image4'); return true" onmouseout="turnOff('image4')"><img src="/images/nav_class.gif" alt="Classroom." width="122" height="21" border="0" name="image4"></a><br><a href="/quiz/" onmouseover="turnOn('image5'); return true" onmouseout="turnOff('image5')"><img src="/images/nav_quiz.gif" alt="Quiz." width="122" height="21" border="0" name="image5"></a><br><a href="/signup/" onmouseover="turnOn('image6'); return true" onmouseout="turnOff('image6')"><img src="/images/nav_sign.gif" alt="Sign Up." width="122" height="21" border="0" name="image6"></a><br><a href="/search/" onmouseover="turnOn('image8'); return true" onmouseout="turnOff('image8')"><img src="/images/nav_srch.gif" alt="Search." width="122" height="24" border="0" name="image8"></a>\
+<a href="/" onmouseover="turnOn('image0'); return true" onmouseout="turnOff('image0')"><img src="/images/nav_home.gif" alt="Home." width="122" height="24" border="0" name="image0"></a><br><a href="/tv/" onmouseover="turnOn('image1'); return true" onmouseout="turnOff('image1')"><img src="/images/nav_ontv.gif" alt="On TV." width="122" height="21" border="0" name="image1"></a><br><a href="/perl/wwwthreads/wwwthreads_main.pl" onmouseover="turnOn('image2'); return true" onmouseout="turnOff('image2')"><img src="/images/nav_disc.gif" alt="Discussions." width="122" height="21" border="0" name="image2"></a><br><a href="http://store.aetv.com" onmouseover="turnOn('image3'); return true" onmouseout="turnOff('image3')"><img src="/images/nav_store.gif" alt="ShopA&amp;E." width="122" height="21" border="0" name="image3"></a><br><a href="http://travel.aande.com" target="_blank" onmouseover="turnOn('image20'); return true" onmouseout="turnOff('image20')"><img src="/images/nav_travel.gif" alt="A&amp;E Travel." width="122" height="21" border="0" name="image20"></a><br><a href="/class/" onmouseover="turnOn('image4'); return true" onmouseout="turnOff('image4')"><img src="/images/nav_class.gif" alt="Classroom." width="122" height="21" border="0" name="image4"></a><br><a href="/quiz/" onmouseover="turnOn('image5'); return true" onmouseout="turnOff('image5')"><img src="/images/nav_quiz.gif" alt="Quiz." width="122" height="21" border="0" name="image5"></a><br><a href="/signup/" onmouseover="turnOn('image6'); return true" onmouseout="turnOff('image6')"><img src="/images/nav_sign.gif" alt="Sign Up." width="122" height="21" border="0" name="image6"></a><br><a href="/search/" onmouseover="turnOn('image8'); return true" onmouseout="turnOff('image8')"><img src="/images/nav_srch.gif" alt="Search." width="122" height="24" border="0" name="image8"></a>
 <p>
-
-<script language="JavaScript">
-<!--
-        var lexa = Math.random() + "";
-        var dro = lexa * 1000000000000000000;
-//-->
-</script>
-
-<script language="javascript">
-<!--
-	document.write('<SCR' + 'IPT language="JavaScript1.1" SRC="http://ad.doubleclick.net/adj/aande.com/sponsor-button/ros/skyscraper;abr=!webtv;sz=120x600;ord=' + dro + '?"></SCR' + 'IPT>');
- //-->
-</script><script language="JavaScript1.1" src="http://ad.doubleclick.net/adj/aande.com/sponsor-button/ros/skyscraper;abr=!webtv;sz=120x600;ord=162198440332496540?"></script>
-
-<script language="javascript">
-<!--
-        if ((!document.images && navigator.userAgent.indexOf('Mozilla/2.') >= 0)  || (navigator.userAgent.indexOf("WebTV")>= 0)) {
-        document.write('<A HREF="http://ad.doubleclick.net/jump/aande.com/sponsor-button/ros/skyscraper;sz=120x600;ord=' + dro + '?">'); 
-        document.write('<IMG SRC="http://ad.doubleclick.net/ad/aande.com/sponsor-button/ros/skyscraper;sz=120x600;ord=' + dro + '?" border=0 height="600" width="120"></A>');
-}
-//--> 
-</script>
-
-<!--
-<A HREF="http://store.aetv.com"><IMG SRC="/images/shopgif.gif" ALT="Shop" WIDTH="119" HEIGHT="61" BORDER="0"></A>
--->
+<a href="http://www.historychannel.com/posters/" target="_blank"><img src="/images/shopgif.gif" alt="Shop A&amp;E!" width="120" height="60" border="0"></a>
 <br>
 <img src="/images/spacer.gif" alt=" " width="122" height="24" border="0">
 
@@ -297,9 +306,9 @@ Any of the policies or procedures above may be changed at any time without prior
 <p>
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000">Visit our other Web sites:<br> <a href="http://www.biography.com" target="_blank"><font color="#003399"><nobr>Biography.com</nobr></font></a><nobr>, <a href="http://www.historychannel.com" target="_blank"><font color="#003399">HistoryChannel.com</font></a>, <a href="http://www.historyinternational.com" target="_blank"><font color="#003399">HistoryInternational.com</font></a>, <a href="http://www.genealogy.com" target="_blank"><font color="#003399">Genealogy.com</font></a></nobr></font></td></tr>
-<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000">© 2001 <a href="http://www.aande.com/corporate/" target="_blank"><font color="#003399">A&amp;E Television Networks.</font></a> All rights reserved.</font></td></tr>
-<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000"><a href="/doubleclick.html" target="_top"><font color="#003399">Advertising Information</font></a> | <a href="/feedback/index.html" target="_top"><font color="#003399">Feedback</font></a> | <a href="/signup/" target="_top"><font color="#003399">Sign Up</font></a> | <a href="/feedback/privacy.html" target="_top"><font color="#003399">Privacy</font></a> | <a href="http://www.aande.com/perl/wwwthreads/guidelines.pl" target="_top"><font color="#003399">Terms of Service</font></a> | <a href="http://www.aande.com/corporate/employ.html" target="_blank"><font color="#003399">Employment Opportunities</font></a></font></td></tr>
-<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica"><a href="/instruct.html" target="_top"><font color="#003399">Click here to make AandE.com your homepage.</font></a></font></td></tr>
+<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000">© 2002 <a href="http://www.aande.com/corporate/" target="_blank"><font color="#003399">A&amp;E Television Networks.</font></a> All rights reserved.</font></td></tr>
+<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000"><a href="http://www.aande.com/doubleclick.html" target="_top"><font color="#003399">Advertising Information</font></a> | <a href="http://www.aande.com/feedback/index.html" target="_top"><font color="#003399">Feedback</font></a> | <a href="http://www.aande.com/signup/" target="_top"><font color="#003399">Sign Up</font></a> | <a href="http://www.aande.com/feedback/privacy.html" target="_top"><font color="#003399">Privacy</font></a> | <a href="http://www.aande.com/perl/wwwthreads/guidelines.pl" target="_top"><font color="#003399">Terms of Service</font></a> | <a href="http://www.aande.com/corporate/employ.html" target="_blank"><font color="#003399">Employment Opportunities</font></a></font></td></tr>
+<tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica"><a href="http://www.aande.com/instruct.html" target="_top"><font color="#003399">Click here to make AandE.com your homepage.</font></a></font></td></tr>
 <tr><td align="CENTER"><font size="-2" face="geneva, arial, helvetica" color="#000000">A&amp;E, A&amp;E logo, A&amp;E Classroom, Biography® Channel, The History Channel®,<br> and The History Channel Classroom® are trademarks of A&amp;E Television Networks.</font></td></tr>
 </tbody></table>
 
@@ -322,7 +331,7 @@ document.write('</IFRAME>');
 
 //document.write('<LAYER SRC="http://ad.doubleclick.net/adl/www.pmss.com/auto;sz=1x1;ord='+rd+'?" width="1" height="1" visibility="hidden" onLoad="moveToAbsolute(layer1.pageX,layer1.pageY);clip.height=1;clip.width=1; visibility=\'show\';"></LAYER>');
 //-->
-</script><iframe src="http://ad.doubleclick.net/adi/www.aandess.com/;sz=1x1;ord=434587995051882300?" width="1" height="1" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><A HREF="http://ad.doubleclick.net/jump/www.aandess.com/;sz=1x1;ord=434587995051882300?" target="_top"><IMG SRC="http://ad.doubleclick.net/ad/www.aandess.com/;sz=1x1;ord=434587995051882300?" border="0" height="1" width="1"></A></iframe>
+</script><iframe src="http://ad.doubleclick.net/adi/www.aandess.com/;sz=1x1;ord=649135276390186100?" width="1" height="1" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><A HREF="http://ad.doubleclick.net/jump/www.aandess.com/;sz=1x1;ord=649135276390186100?" target="_top"><IMG SRC="http://ad.doubleclick.net/ad/www.aandess.com/;sz=1x1;ord=649135276390186100?" border="0" height="1" width="1"></A></iframe>
 
 
 
